--- a/index.html
+++ b/index.html
@@ -52,48 +52,48 @@
   </div>
 </section>
 
-  <section id="experience" class="distinct-section fade-in">
-    <h2>Experience</h2>
+ <section id="experience" class="distinct-section fade-in">
+  <h2>Experience</h2>
 
   <!-- BNY – Hedge Funds Analyst -->
   <div class="exp-card">
     <div class="exp-header">
-      <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
+      <img src="assets/bny-logo.jpg" alt="BNY Mellon" class="exp-logo">
       <div class="exp-info">
         <h3>BNY Mellon</h3>
         <p class="exp-title">Hedge Funds Analyst — Aug 2025 – Present</p>
       </div>
     </div>
     <ul class="exp-list">
-      <li>Built a <strong>Power BI</strong> dashboard to track digital tool adoption; surfaced <strong>100+ analyst hours/month</strong> in efficiency gains.</li>
-      <li>Drove workflow modernization in hedge fund administration touching portfolios of <strong>$50B+ AUM</strong>.</li>
-      <li>Partnered with senior analysts to prioritize automation opportunities aligned to business goals.</li>
+      <li>Built out a <strong>Power BI</strong> dashboard to monitor digital tool usage across hedge fund teams, helping leadership measure adoption and identify areas for automation.</li>
+      <li>Highlighted efficiency gains worth <strong>100+ analyst hours per month</strong>, creating a data-driven case for scaling automation.</li>
+      <li>Exposure to hedge fund administration processes, with a focus on driving modernization in an environment managing <strong>$50B+ AUM</strong>.</li>
     </ul>
     <div class="skill-tags">
       <span>Power BI</span><span>Python</span><span>SQL</span><span>Automation</span>
     </div>
   </div>
 
-  <!-- BNY – Global Compliance & Risk -->
+  <!-- BNY – Global Compliance & Risk Analyst Intern -->
   <div class="exp-card">
     <div class="exp-header">
-      <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
+      <img src="assets/bny-logo.jpg" alt="BNY Mellon" class="exp-logo">
       <div class="exp-info">
         <h3>BNY Mellon</h3>
         <p class="exp-title">Global Compliance & Risk Analyst Intern — Jun 2024 – Aug 2024</p>
       </div>
     </div>
     <ul class="exp-list">
-      <li>Created <strong>Power BI</strong> dashboards for liquidity & cash management, giving real-time visibility into <strong>thousands of daily transactions</strong>.</li>
-      <li>Documented and standardized <strong>10+</strong> treasury workflows in <strong>Visio</strong>, providing a blueprint for automation.</li>
-      <li>Worked with compliance leaders to pinpoint bottlenecks impacting screening and reporting speed.</li>
+      <li>Created <strong>Power BI</strong> dashboards that gave real-time visibility into <strong>thousands of daily cash and liquidity transactions</strong>, reducing reliance on manual spreadsheets.</li>
+      <li>Documented and standardized <strong>10+ treasury workflows</strong> in <strong>Visio</strong>, providing a roadmap for future automation projects.</li>
+      <li>Gained hands-on experience balancing compliance requirements with operational efficiency in a global financial setting.</li>
     </ul>
     <div class="skill-tags">
       <span>Power BI</span><span>Liquidity</span><span>Cash Management</span><span>Visio</span>
     </div>
   </div>
 
-  <!-- UCF – Research Assistant -->
+  <!-- UCF – Data Analytics Research Assistant -->
   <div class="exp-card">
     <div class="exp-header">
       <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
@@ -103,9 +103,9 @@
       </div>
     </div>
     <ul class="exp-list">
-      <li>Designed a <strong>Power BI</strong> system tracking contracts for <strong>926</strong> grad students with real-time status views.</li>
-      <li>Automated weekly/cumulative reporting, cutting manual tracking by ~<strong>40%</strong> across <strong>10+ departments</strong>.</li>
-      <li>Introduced predictive insights to flag engagement risks earlier for faculty and administrators.</li>
+      <li>Designed a <strong>Power BI</strong> system to track graduate student contracts, making status updates accessible to faculty and administrators at a glance.</li>
+      <li>Automated weekly and cumulative reports, reducing manual effort by ~<strong>40%</strong> and improving the timeliness of decision-making.</li>
+      <li>Introduced predictive insights to flag potential engagement issues early, strengthening collaboration across <strong>10+ departments</strong>.</li>
     </ul>
     <div class="skill-tags">
       <span>Power BI</span><span>Predictive Analytics</span><span>Data Visualization</span>
@@ -122,9 +122,9 @@
       </div>
     </div>
     <ul class="exp-list">
-      <li>Analyzed gamified prosthetic training data; <strong>R</strong> visualizations (<em>ggplot2</em>, <em>dplyr</em>) showed a <strong>10%+</strong> lift in pediatric engagement.</li>
-      <li>Contributed to a manuscript <strong>(pending publication)</strong> on reinforcement-learning agents improving rehabilitation gaming.</li>
-      <li>Translated technical ML concepts into clear findings for non-technical stakeholders.</li>
+      <li>Analyzed how children interacted with gamified prosthetic training platforms, using <strong>R</strong> (<em>ggplot2</em>, <em>dplyr</em>) to visualize progress and engagement trends.</li>
+      <li>Helped show a <strong>10%+ increase</strong> in user engagement from game-based training methods compared to traditional approaches.</li>
+      <li>Contributed to a manuscript (<strong>pending publication</strong>) documenting Limbitless’s use of reinforcement learning agents to make rehabilitation gaming more adaptive and user-friendly.</li>
     </ul>
     <div class="skill-tags">
       <span>R</span><span>ggplot2</span><span>dplyr</span><span>Reinforcement Learning</span>
@@ -141,9 +141,9 @@
       </div>
     </div>
     <ul class="exp-list">
-      <li>Deployed a <strong>Flask + Heroku</strong> app hosting a <strong>linear regression</strong> model trained on <strong>10K+</strong> records.</li>
-      <li>Transformed & analyzed <strong>50K+</strong> cab ride records in Python; comparative analysis surfaced key investment factors.</li>
-      <li>Practiced reproducible workflows: version control, documentation, and clear presentation of results.</li>
+      <li>Worked on deploying a <strong>Flask + Heroku</strong> app that hosted a <strong>linear regression</strong> model trained on <strong>10K+ records</strong> to predict student test scores.</li>
+      <li>Applied <strong>Python</strong> data transformation techniques to clean and analyze <strong>50K+ cab ride records</strong>, conducting performance comparisons between companies.</li>
+      <li>Collaborated in a remote, global team environment, learning best practices for version control, documentation, and presenting results to diverse stakeholders.</li>
     </ul>
     <div class="skill-tags">
       <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span>
