--- a/index.html
+++ b/index.html
@@ -151,52 +151,54 @@
   </div>
 </section>
 
-  <section id="projects" class="distinct-section fade-in">
-    <h2>Projects</h2>
-    <div class="project-grid">
+<section id="projects" class="distinct-section fade-in">
+  <h2>Projects</h2>
+  <div class="project-grid">
 
-      <!-- LLM Project -->
-      <div class="project-card">
-        <h3>Enterprise LLM Evaluation & Deployment</h3>
-        <p>Benchmarked <strong>12 LLMs</strong> on runtime, cost, and scalability; identified <strong>40%</strong> efficiency gains and potential <strong>$100K+</strong> annual savings via secure open-source adoption.</p>
-        <div class="skill-tags left-align">
-          <span>Python</span><span>LLM Evaluation</span><span>Prompt Engineering</span><span>AI Governance</span>
-        </div>
-        <p class="project-extra">
-          Delivered an executive roadmap minimizing vendor lock-in and aligning adoption with compliance and scale.
-        </p>
-        <div class="click-hint">Click to see more</div>
+    <!-- LLM Evaluation & Deployment -->
+    <div class="project-card">
+      <h3>Enterprise LLM Evaluation & Deployment</h3>
+      <p>Benchmarked <strong>12 large language models</strong> on runtime, cost, and scalability. Identified efficiency gains of <strong>40%</strong> and projected <strong>$100K+ annual savings</strong> through open-source adoption.</p>
+      <div class="skill-tags left-align">
+        <span>Python</span><span>LLM Evaluation</span><span>Prompt Engineering</span><span>AI Governance</span>
       </div>
-
-      <!-- Addition Financial -->
-      <div class="project-card">
-        <h3>Addition Financial Analytics</h3>
-        <p>Queried demographic/economic data in <strong>SQL/Python</strong> to assess branch expansion; projections showed <strong>10–12%</strong> market reach lift and <strong>$5M+</strong> deposits.</p>
-        <div class="skill-tags left-align">
-          <span>Python</span><span>SQL</span><span>Geospatial</span><span>Financial Analytics</span>
-        </div>
-        <p class="project-extra">
-          Modeled population density, income, and local behavior to rank candidate sites for network growth.
-        </p>
-        <div class="click-hint">Click to see more</div>
-      </div>
-
-      <!-- Multus Medium -->
-      <div class="project-card">
-        <h3>Multus Medium (Recommendation System)</h3>
-        <p>Implemented <strong>matrix factorization</strong> in <strong>PyTorch</strong> for cross-media personalization; improved relevance by ~<strong>10–15%</strong> vs. baseline.</p>
-        <div class="skill-tags left-align">
-          <span>PyTorch</span><span>Recommenders</span><span>Matrix Factorization</span><span>AI Personalization</span>
-        </div>
-        <p class="project-extra">
-          Designed for scalable user–item pipelines and evaluation; code available on GitHub.
-          <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
-        </p>
-        <div class="click-hint">Click to see more</div>
-      </div>
-
+      <p class="project-extra">
+        Delivered an executive roadmap to guide secure enterprise deployment and reduce vendor lock-in.
+        <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
+      </p>
+      <div class="click-hint">Click to see more</div>
     </div>
-  </section>
+
+    <!-- Addition Financial Competition -->
+    <div class="project-card">
+      <h3>Addition Financial Analytics Competition</h3>
+      <p>Queried <strong>Census and economic data</strong> in SQL/Python to evaluate branch expansion opportunities across Florida. Models projected a <strong>10–12% increase</strong> in market reach and <strong>$5M+ in deposits</strong>.</p>
+      <div class="skill-tags left-align">
+        <span>Python</span><span>SQL</span><span>Geospatial</span><span>Financial Analytics</span>
+      </div>
+      <p class="project-extra">
+        Built predictive models ranking candidate sites based on population density, income distribution, and consumer behavior.
+      </p>
+      <div class="click-hint">Click to see more</div>
+    </div>
+
+    <!-- Multus Medium -->
+    <div class="project-card">
+      <h3>Multus Medium (Recommendation System)</h3>
+      <p>Implemented a <strong>matrix factorization model</strong> in PyTorch to deliver personalized recommendations. Processed <strong>1M+ user–item interactions</strong>, improving accuracy by <strong>10–15%</strong> compared to baseline models.</p>
+      <div class="skill-tags left-align">
+        <span>PyTorch</span><span>Recommenders</span><span>Matrix Factorization</span><span>AI Personalization</span>
+      </div>
+      <p class="project-extra">
+        Designed for cross-media personalization (music, film, articles) and scalable user–item pipelines. 
+        <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
+      </p>
+      <div class="click-hint">Click to see more</div>
+    </div>
+
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 Maria Contractor |
