--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
       <p class="project-extra">
         Delivered an executive roadmap to guide secure enterprise deployment and reduce vendor lock-in.
-        <br><a href="https://github.com/mcont55/song-recommendation-prototype" class="project-link" target="_blank">View Project</a>
+        <br><a href="assets/To-Be Final Presentation.pdf" class="project-link" target="_blank">View Project</a>
       </p>
       <div class="click-hint">Click to see more</div>
     </div>
