--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <p class="tagline highlight"><span id="typed"></span></p>
       <p class="tagline">Python • SQL • Power BI • PyTorch • Flask</p>
       <div class="resume-container">
-        <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
+        <a href="assets/Analyst_Resume_Maria_Contractor.pdf" class="resume-button" target="_blank">View Resume</a>
+        <a href="assets/Analyst_Resume_Maria_Contractor.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
       </div>
     </div>
   </header>
