--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
       <p class="tagline highlight"><span id="typed"></span></p>
-      <p class="tagline">Python • SQL • Power BI • PyTorch • Flask</p>
+      <p class="tagline">Python • SQL • Power BI • PyTorch</p>
       <div class="resume-container">
         <a href="assets/Analyst_Resume_Maria_Contractor.pdf" class="resume-button" target="_blank">View Resume</a>
         <a href="assets/Analyst_Resume_Maria_Contractor.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
@@ -33,10 +33,10 @@
 <section id="about" class="distinct-section fade-in">
   <h2>About Me</h2>
   <p>
-    I’m Maria Contractor, a Data Science graduate with a background in statistics and a passion for solving problems at the intersection of **finance and technology**. Right now, I work as a Hedge Funds Analyst at BNY Mellon, where I focus on **building dashboards, streamlining workflows, and uncovering insights** that make complex operations more efficient and transparent.
+    I’m Maria Contractor, a Data Science graduate with a background in statistics and experience applying analytics in finance, research, and technology. At BNY Mellon, I help modernize hedge fund operations and compliance workflows through dashboards, automation, and data-driven insights that improve efficiency at scale.
   </p>
   <p>
-    I enjoy projects that blend **analytics, automation, and strategy**—whether that’s evaluating large language models for enterprise use, designing predictive dashboards, or deploying machine learning models. Outside of work, you’ll usually find me on the tennis court with my family or learning new Bollywood dance styles, which helps me bring creativity and energy into everything I do.
+    I’m constantly looking for opportunities to strengthen my skills—whether that’s evaluating large language models, building predictive dashboards, or deploying machine learning systems. I thrive on projects where analytics and strategy intersect, and I enjoy translating complex data into insights that drive better decisions. Outside of work, you’ll often find me on the tennis court with my family or learning new Bollywood dance styles, which keeps me creative and energetic in everything I do.
   </p>
 </section>
 
@@ -44,11 +44,11 @@
 <section id="skills" class="distinct-section fade-in">
   <h2>Skills</h2>
   <div class="skills-list">
-    <div><strong>Languages:</strong> Python, SQL, R, Java, JavaScript, C</div>
-    <div><strong>Data Science & ML:</strong> pandas, NumPy, scikit-learn, PyTorch, Recommenders, Linear Regression, LLM Evaluation</div>
+    <div><strong>Languages:</strong> Python, SQL, R, C</div>
+    <div><strong>Data Science & ML:</strong> pandas, NumPy, scikit-learn, PyTorch</div>
     <div><strong>Visualization & BI:</strong> Power BI, Tableau, matplotlib, seaborn, ggplot2</div>
     <div><strong>Deployment & Tools:</strong> Flask, Heroku, Git/GitHub, Microsoft Visio</div>
-    <div><strong>Domains:</strong> Finance Analytics, Liquidity & Treasury, Hedge Funds, Automation, Dashboards</div>
+    <div><strong>Domains:</strong> Financial Analytics, Business Intelligence, Predictive Analytics </div>
   </div>
 </section>
 
@@ -66,11 +66,11 @@
     </div>
     <ul class="exp-list">
       <li>Built out a <strong>Power BI</strong> dashboard to monitor digital tool usage across hedge fund teams, helping leadership measure adoption and identify areas for automation.</li>
-      <li>Highlighted efficiency gains worth <strong>100+ analyst hours per month</strong>, creating a data-driven case for scaling automation.</li>
+      <li>Highlighted efficiency gains worth <strong>1000+ hours per year</strong>, creating a data-driven case for scaling automation.</li>
       <li>Exposure to hedge fund administration processes, with a focus on driving modernization in an environment managing <strong>$50B+ AUM</strong>.</li>
     </ul>
     <div class="skill-tags">
-      <span>Power BI</span><span>Python</span><span>SQL</span><span>Automation</span>
+      <span>Power BI</span><span>Python</span><span>SQL</span>
     </div>
   </div>
 
@@ -89,7 +89,7 @@
       <li>Gained hands-on experience balancing compliance requirements with operational efficiency in a global financial setting.</li>
     </ul>
     <div class="skill-tags">
-      <span>Power BI</span><span>Liquidity</span><span>Cash Management</span><span>Visio</span>
+      <span>Power BI</span><span>Risk Analysis</span><span>Cash Management</span><span>Visio</span>
     </div>
   </div>
 
@@ -105,7 +105,7 @@
     <ul class="exp-list">
       <li>Designed a <strong>Power BI</strong> system to track graduate student contracts, making status updates accessible to faculty and administrators at a glance.</li>
       <li>Automated weekly and cumulative reports, reducing manual effort by ~<strong>40%</strong> and improving the timeliness of decision-making.</li>
-      <li>Introduced predictive insights to flag potential engagement issues early, strengthening collaboration across <strong>10+ departments</strong>.</li>
+      <li>Introduced predictive insights to flag potential engagement issues early, strengthening collaboration across <strong>15+ departments</strong>.</li>
     </ul>
     <div class="skill-tags">
       <span>Power BI</span><span>Predictive Analytics</span><span>Data Visualization</span>
@@ -146,7 +146,7 @@
       <li>Collaborated in a remote, global team environment, learning best practices for version control, documentation, and presenting results to diverse stakeholders.</li>
     </ul>
     <div class="skill-tags">
-      <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span>
+      <span>Python</span><span>Flask</span><span>Heroku</span><span>ETL</span><span>Linear Regression</span>
     </div>
   </div>
 </section>
@@ -160,7 +160,7 @@
       <h3>Enterprise LLM Evaluation & Deployment</h3>
       <p>Benchmarked <strong>12 large language models</strong> on runtime, cost, and scalability. Identified efficiency gains of <strong>40%</strong> and projected <strong>$100K+ annual savings</strong> through open-source adoption.</p>
       <div class="skill-tags left-align">
-        <span>Python</span><span>LLM Evaluation</span><span>Prompt Engineering</span><span>AI Governance</span>
+        <span>Python</span><span>Cost Optimization</span><span>Prompt Engineering</span><span>AI Governance</span>
       </div>
       <p class="project-extra">
         Delivered an executive roadmap to guide secure enterprise deployment and reduce vendor lock-in.
@@ -174,7 +174,7 @@
       <h3>Addition Financial Analytics Competition</h3>
       <p>Queried <strong>Census and economic data</strong> in SQL/Python to evaluate branch expansion opportunities across Florida. Models projected a <strong>10–12% increase</strong> in market reach and <strong>$5M+ in deposits</strong>.</p>
       <div class="skill-tags left-align">
-        <span>Python</span><span>SQL</span><span>Geospatial</span><span>Financial Analytics</span>
+        <span>Python</span><span>SQL</span><span>Geospatial Analysis</span><span>Financial Modeling</span>
       </div>
       <p class="project-extra">
         Built predictive models ranking candidate sites based on population density, income distribution, and consumer behavior.
@@ -187,7 +187,7 @@
       <h3>Multus Medium (Recommendation System)</h3>
       <p>Implemented a <strong>matrix factorization model</strong> in PyTorch to deliver personalized recommendations. Processed <strong>1M+ user–item interactions</strong>, improving accuracy by <strong>10–15%</strong> compared to baseline models.</p>
       <div class="skill-tags left-align">
-        <span>PyTorch</span><span>Recommenders</span><span>Matrix Factorization</span><span>AI Personalization</span>
+        <span>PyTorch</span><span>Recommender Systems</span><span>Matrix Factorization</span>
       </div>
       <p class="project-extra">
         Designed for cross-media personalization (music, film, articles) and scalable user–item pipelines. 
