--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 <section id="about" class="distinct-section fade-in">
   <h2>About Me</h2>
   <p>
-    I’m Maria Contractor, a Data Science graduate with a background in statistics and experience applying analytics in finance, research, and technology. At BNY Mellon, I help modernize hedge fund operations and compliance workflows through dashboards, automation, and data-driven insights that improve efficiency at scale.
+    I’m Maria Contractor, a Data Science graduate with a background in statistics and experience applying analytics in finance, research, and technology. At BNY, I design dashboards and streamline workflows that improve efficiency in hedge fund analytics and compliance, while continuing to build expertise in automation and machine learning. I’m always looking for opportunities that challenge me and strengthen my skills so I can keep growing as a data professional.
   </p>
   <p>
-    I’m constantly looking for opportunities to strengthen my skills—whether that’s evaluating large language models, building predictive dashboards, or deploying machine learning systems. I thrive on projects where analytics and strategy intersect, and I enjoy translating complex data into insights that drive better decisions. Outside of work, you’ll often find me on the tennis court with my family or learning new Bollywood dance styles, which keeps me creative and energetic in everything I do.
+    I thrive on projects where analytics meets strategy. That includes evaluating large language models, developing predictive dashboards and deploying machine learning systems. I enjoy translating complex data into clear insights that drive better decisions, and I’m eager to bring that same energy to future roles. Outside of work, I stay creative and energetic through tennis with my family and learning new Bollywood dance styles.
   </p>
 </section>
+
 
 
 <section id="skills" class="distinct-section fade-in">
